<resources>
    <string name="app_name">Base Android App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="move_detail">move to detail</string>
    <string name="home_detail">home detail</string>
    <string name="list_fragment">list fragment</string>
    <string name="profile_fragment">this is profile fragment</string>
    <string name="channel_name">channel Name</string>
    <string name="channel_description">channel description</string>
    <string name="default_notification_channel_id">fcm default channel id</string>


    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>

    <string name="gyosi_1">1</string>
    <string name="gyosi_2">2</string>
    <string name="gyosi_3">3</string>
    <string name="gyosi_4">4</string>
    <string name="gyosi_5">5</string>
    <string name="gyosi_6">6</string>

    <string name="grade">학년</string>
    <string name="ban">반</string>
    <string name="grade_1">1학년</string>
    <string name="grade_2">2학년</string>
    <string name="grade_3">3학년</string>
    <string name="grade_4">4학년</string>
    <string name="grade_5">5학년</string>
    <string name="grade_6">6학년</string>

    <string name="save_setting">저장하기</string>
    <string name="grade_setting_text">반 설정</string>
    <string name="grade_setting_sub">학년별 반 수를 입력하세요</string>
    <string name="grade_saved_text">저장하였습니다.</string>

</resources>