<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:orientation="horizontal"
    android:paddingHorizontal="4dp">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cb_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="전체보기" />

            <CheckBox
                android:id="@+id/cb_grade_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_6" />

            <CheckBox
                android:id="@+id/cb_grade_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_5" />

            <CheckBox
                android:id="@+id/cb_grade_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_4" />

            <CheckBox
                android:id="@+id/cb_grade_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_3" />

            <CheckBox
                android:id="@+id/cb_grade_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_2" />

            <CheckBox
                android:id="@+id/cb_grade_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_1" />

        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>
