<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/grade_filter"
                layout="@layout/item_filter_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/ban_filter"
                layout="@layout/item_filter_dynamic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <HorizontalScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="4dp">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@color/black"
                                android:orientation="vertical"
                                android:padding="4dp">

                                <GridLayout
                                    android:id="@+id/layout_grid"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:background="@color/white">

                                    <TextView
                                        style="@style/TextView_RowDay"
                                        android:layout_row="0"
                                        android:layout_column="0" />

                                    <TextView
                                        style="@style/TextView_RowDay"
                                        android:layout_row="0"
                                        android:layout_column="1"
                                        android:text="@string/monday" />

                                    <TextView
                                        style="@style/TextView_RowDay"
                                        android:layout_row="0"
                                        android:layout_column="2"
                                        android:text="@string/tuesday" />

                                    <TextView
                                        style="@style/TextView_RowDay"
                                        android:layout_row="0"
                                        android:layout_column="3"
                                        android:text="@string/wednesday" />

                                    <TextView
                                        style="@style/TextView_RowDay"
                                        android:layout_row="0"
                                        android:layout_column="4"
                                        android:text="@string/thursday" />

                                    <TextView
                                        style="@style/TextView_RowDay"
                                        android:layout_row="0"
                                        android:layout_column="5"
                                        android:text="@string/friday" />


                                    <!--                gyosi -->
                                    <TextView
                                        style="@style/TextView_RowDay"
                                        android:layout_height="match_parent"
                                        android:layout_row="1"
                                        android:layout_column="0"
                                        android:text="@string/gyosi_1" />

                                    <TextView
                                        style="@style/TextView_RowDay"
                                        android:layout_height="fill_parent"
                                        android:layout_row="2"
                                        android:layout_column="0"
                                        android:text="@string/gyosi_2" />

                                    <TextView
                                        style="@style/TextView_RowDay"
                                        android:layout_height="match_parent"
                                        android:layout_row="3"
                                        android:layout_column="0"
                                        android:text="@string/gyosi_3" />

                                    <TextView
                                        style="@style/TextView_RowDay"
                                        android:layout_height="match_parent"
                                        android:layout_row="4"
                                        android:layout_column="0"
                                        android:text="@string/gyosi_4" />

                                    <TextView
                                        style="@style/TextView_RowDay"
                                        android:layout_height="match_parent"
                                        android:layout_row="5"
                                        android:layout_column="0"
                                        android:text="@string/gyosi_5" />

                                    <TextView
                                        style="@style/TextView_RowDay"
                                        android:layout_height="match_parent"
                                        android:layout_row="6"
                                        android:layout_column="0"
                                        android:text="@string/gyosi_6" />

                                </GridLayout>

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>

            </HorizontalScrollView>


        </LinearLayout>

    </ScrollView>


    <EditText
        android:id="@+id/et_row"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="row"
        android:inputType="numberDecimal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_add" />


    <EditText
        android:id="@+id/et_column"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="column"
        android:inputType="numberDecimal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/et_row" />


    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="clear"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="add item"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_clear" />

</LinearLayout>