<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textAlignment="center"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:text="@string/grade_setting_text" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginBottom="20dp"
                    android:text="@string/grade_setting_sub" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.example.baseandroidapp.feature.setting.SettingsPicker
                        android:id="@+id/picker_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.example.baseandroidapp.feature.setting.SettingsPicker
                        android:id="@+id/picker_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.example.baseandroidapp.feature.setting.SettingsPicker
                        android:id="@+id/picker_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.example.baseandroidapp.feature.setting.SettingsPicker
                        android:id="@+id/picker_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.example.baseandroidapp.feature.setting.SettingsPicker
                        android:id="@+id/picker_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.example.baseandroidapp.feature.setting.SettingsPicker
                        android:id="@+id/picker_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </HorizontalScrollView>

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_setting"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

</LinearLayout>